request improvements